# stm32f0-rust-blinky

./: Cargo.toml  README.md  memory.x  openocd.cfg
.cargo/: config
src/: main.rs
